--- a/tp2_indexador/TP2 - Dojo - Indice.ipynb
+++ b/tp2_indexador/TP2 - Dojo - Indice.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        " 'prédio': [(term_id:8 doc: 3 freq: 1)]}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -253,17 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======= Indice Gerado ======\n",
-      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
-      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
-      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
+      "======= Indice Gerado ======"
      ]
     },
     {
@@ -275,6 +272,16 @@
       "Ran 1 test in 0.000s\n",
       "\n",
       "OK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
+      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
+      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
      ]
     }
    ],
@@ -291,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +411,7 @@
        " 'prédio': term_id: 8, doc_count_with_term: 1, term_file_start_pos: 110}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +457,7 @@
        " (term_id:8 doc: 3 freq: 1)]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -571,27 +578,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primeira execução (criação inicial do indice) [ok]\n",
+      "Inserção de alguns itens - teste 1/2 [ok]\n",
+      "Inserção de alguns itens - teste 2/2 [ok]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.009s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m index.file_index_test FileIndexTest.test_save_tmp_occurrences"
+    "!python -m index.file_index_test FileIndexTest.test_save_tmp_occurrences"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Atividade 8: método finish_indexing:** Agora, com as ocorrências organizadas no arquivo por termo, você deverá implementar o método `finish_indexing` para atualizar o atributo `dic_index` com a posição inicial e quantidade de documentos de cada termo nas suas instancias `TermFilePosition`. Logo após, execute o teste unitário abaixo."
+    "**Atividade 8 - método finish_indexing:** Agora, com as ocorrências organizadas no arquivo por termo, você deverá implementar o método `finish_indexing` para atualizar o atributo `dic_index` com a posição inicial e quantidade de documentos de cada termo nas suas instancias `TermFilePosition`. Logo após, execute o teste unitário abaixo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista de ocorrências a serem testadas:\n",
+      "(term_id:1 doc: 1 freq: 3)\n",
+      "(term_id:1 doc: 2 freq: 2)\n",
+      "(term_id:1 doc: 3 freq: 1)\n",
+      "(term_id:2 doc: 1 freq: 1)\n",
+      "(term_id:2 doc: 2 freq: 1)\n",
+      "(term_id:2 doc: 3 freq: 2)\n",
+      "(term_id:3 doc: 1 freq: 3)\n",
+      "(term_id:4 doc: 1 freq: 5)\n",
+      "(term_id:4 doc: 2 freq: 5)\n",
+      "Tamanho de cada ocorrência: 22 bytes\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m index.file_index_test FileIndexTest.test_finish_indexing"
+    "!python -m index.file_index_test FileIndexTest.test_finish_indexing"
    ]
   },
   {
@@ -618,18 +675,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======= Indice Gerado ======\n",
+      "casa -> []\n",
+      "vermelho -> []\n",
+      "verde -> []\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.010s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "!python -m index.index_structure_test  FileStructureTest.test_document_count_with_term"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======= Indice Gerado ======\n",
+      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
+      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
+      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.003s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "!python -m index.index_structure_test  FileStructureTest.test_get_occurrence_list"
    ]
@@ -650,9 +751,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memoria usada: 203.43078 MB; Máximo 203.43086 MB\n",
+      "Indexando ocorrencia #1,250,000/1,250,000 (100%)\n",
+      "Tempo gasto: 12.71487s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 13.338s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=1 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import unittest\n",
     "from index.performance_test import PerformanceTest\n",
@@ -673,9 +806,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memoria usada: 4.099429 MB; Máximo 5.744153 MB\n",
+      "Indexando ocorrencia #1,250,000/1,250,000 (100%)\n",
+      "Tempo gasto: 1252.834724s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 1252.867s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=1 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import unittest\n",
     "from index.performance_test import FilePerformanceTest,PerformanceTest\n",
@@ -769,7 +934,7 @@
    "source": [
     "print(f\"{cleaner_test.is_stop_word('japão')}, esperado: False\")\n",
     "print(f\"{cleaner_test.is_stop_word('cama')}, esperado: False\")\n",
-    "print(f\"{cleaner_test.is_stop_word('é')}, esperado: True\")\n"
+    "print(f\"{cleaner_test.is_stop_word('é')}, esperado: True\")"
    ]
   },
   {
@@ -787,7 +952,7 @@
    "source": [
     "print(f\"{cleaner_test.word_stem('verdade')}, esperado: verdad\")\n",
     "print(f\"{cleaner_test.word_stem('estudante')}, esperado: estud\")\n",
-    "print(f\"{cleaner_test.word_stem('amado')}, esperado: amad\")\n"
+    "print(f\"{cleaner_test.word_stem('amado')}, esperado: amad\")"
    ]
   },
   {
@@ -805,7 +970,7 @@
    "source": [
     "print(f\"{cleaner_test.remove_accents('canção')}, esperado: cancao\")\n",
     "print(f\"{cleaner_test.remove_accents('elétrico')}, esperado: eletrico\")\n",
-    "print(f\"{cleaner_test.remove_accents('amado')}, esperado: amado\")\n"
+    "print(f\"{cleaner_test.remove_accents('amado')}, esperado: amado\")"
    ]
   },
   {
@@ -850,7 +1015,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "index = HashIndex()\n",
     "indexador_teste = HTMLIndexer(index)\n",
     "#o HTML está mal formado de propósito ;)\n",
@@ -879,7 +1043,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Atividade 14: Indexação de um diretorio com subdiretorios** Você deverá implementar o método `index_text_dir` que, dado um diretorio, navega em todos os seus subdiretórios e indexa todos os arquivos HTMLs. Considere que os arquivos sejam sempre nomeados pelo seu ID. Veja o exemplo em `doc_test`. Logo após, execute o teste unitário para ver a corretude do seu indexador."
+    "**Atividade 14 - Indexação de um diretorio com subdiretorios** Você deverá implementar o método `index_text_dir` que, dado um diretorio, navega em todos os seus subdiretórios e indexa todos os arquivos HTMLs. Considere que os arquivos sejam sempre nomeados pelo seu ID. Veja o exemplo em `doc_test`. Logo após, execute o teste unitário para ver a corretude do seu indexador."
    ]
   },
   {
