--- a/tp2_indexador/TP2 - Dojo - Indice.ipynb
+++ b/tp2_indexador/TP2 - Dojo - Indice.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        " 'prédio': [(term_id:8 doc: 3 freq: 1)]}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,17 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======= Indice Gerado ======\n",
-      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
-      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
-      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
+      "======= Indice Gerado ======"
      ]
     },
     {
@@ -200,6 +197,16 @@
       "\n",
       "OK\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
+      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
+      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
+     ]
     }
    ],
    "source": [
@@ -208,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -253,14 +260,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======= Indice Gerado ======"
+      "======= Indice Gerado ======\n",
+      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
+      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
+      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
      ]
     },
     {
@@ -272,16 +282,6 @@
       "Ran 1 test in 0.000s\n",
       "\n",
       "OK\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
-      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
-      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
      ]
     }
    ],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        " 'prédio': term_id: 8, doc_count_with_term: 1, term_file_start_pos: 110}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        " (term_id:8 doc: 3 freq: 1)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.009s\n",
+      "Ran 1 test in 0.025s\n",
       "\n",
       "OK\n"
      ]
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -683,9 +683,9 @@
      "output_type": "stream",
      "text": [
       "======= Indice Gerado ======\n",
-      "casa -> []\n",
-      "vermelho -> []\n",
-      "verde -> []\n"
+      "casa -> [(term_id:1 doc: 1 freq: 10), (term_id:1 doc: 2 freq: 3)]\n",
+      "vermelho -> [(term_id:2 doc: 1 freq: 3), (term_id:2 doc: 2 freq: 1), (term_id:2 doc: 3 freq: 1)]\n",
+      "verde -> [(term_id:3 doc: 1 freq: 1)]\n"
      ]
     },
     {
@@ -694,7 +694,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.010s\n",
+      "Ran 1 test in 0.009s\n",
       "\n",
       "OK\n"
      ]
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -751,16 +751,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Memoria usada: 203.43078 MB; Máximo 203.43086 MB\n",
+      "Memoria usada: 203.42519 MB; Máximo 203.42527 MB\n",
       "Indexando ocorrencia #1,250,000/1,250,000 (100%)\n",
-      "Tempo gasto: 12.71487s\n"
+      "Tempo gasto: 11.479161s\n"
      ]
     },
     {
@@ -770,7 +770,7 @@
       "ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 13.338s\n",
+      "Ran 1 test in 12.119s\n",
       "\n",
       "OK\n"
      ]
@@ -781,7 +781,7 @@
        "<unittest.runner.TextTestResult run=1 errors=0 failures=0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,17 +905,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "© oi! Meu nome é Hasan\n"
+     ]
+    }
+   ],
    "source": [
     "cleaner_test = Cleaner(stop_words_file=\"stopwords.txt\",\n",
     "                        language=\"portuguese\",\n",
     "                        perform_stop_words_removal=True,\n",
     "                        perform_accents_removal=True,\n",
     "                        perform_stemming=True)\n",
-    "cleaner_test.html_to_plain_text(\"&copy; oi! Meu nome é <strong>Hasan</strong>\")\n",
-    "#esperado: '© oi! Meu nome é Hasan'"
+    "plain_text = cleaner_test.html_to_plain_text(\"&copy; oi! Meu nome é <strong>Hasan</strong>\")\n",
+    "#esperado: '© oi! Meu nome é Hasan'\n",
+    "print(plain_text)"
    ]
   },
   {
@@ -928,9 +937,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False, esperado: False\n",
+      "False, esperado: False\n",
+      "True, esperado: True\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"{cleaner_test.is_stop_word('japão')}, esperado: False\")\n",
     "print(f\"{cleaner_test.is_stop_word('cama')}, esperado: False\")\n",
@@ -946,9 +965,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "verdad, esperado: verdad\n",
+      "estud, esperado: estud\n",
+      "amad, esperado: amad\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"{cleaner_test.word_stem('verdade')}, esperado: verdad\")\n",
     "print(f\"{cleaner_test.word_stem('estudante')}, esperado: estud\")\n",
@@ -964,9 +993,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cancao, esperado: cancao\n",
+      "eletrico, esperado: eletrico\n",
+      "amado, esperado: amado\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"{cleaner_test.remove_accents('canção')}, esperado: cancao\")\n",
     "print(f\"{cleaner_test.remove_accents('elétrico')}, esperado: eletrico\")\n",
@@ -991,9 +1030,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ola': 1, 'qual': 1, 'o': 1, 'dad': 2, 'que': 1, 'precis': 1}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "index = HashIndex()\n",
     "indexador_teste = HTMLIndexer(index)\n",
@@ -1011,9 +1061,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ola': [(term_id:0 doc: 10 freq: 1)],\n",
+       " 'qua': [(term_id:1 doc: 10 freq: 1)],\n",
+       " 'sao': [(term_id:2 doc: 10 freq: 1)],\n",
+       " 'os': [(term_id:3 doc: 10 freq: 1)],\n",
+       " 'dad': [(term_id:4 doc: 10 freq: 1)],\n",
+       " 'que': [(term_id:5 doc: 10 freq: 1)],\n",
+       " 'precis': [(term_id:6 doc: 10 freq: 1)]}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "index = HashIndex()\n",
     "indexador_teste = HTMLIndexer(index)\n",
@@ -1048,9 +1115,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.015s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "!python -m index.indexer_test IndexerTest.test_indexer"
    ]
