--- a/tp2_indexador/TP2 - Dojo - Indice.ipynb
+++ b/tp2_indexador/TP2 - Dojo - Indice.ipynb
@@ -1115,8 +1115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1124,7 +1126,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.015s\n",
+      "Ran 1 test in 0.016s\n",
       "\n",
       "OK\n"
      ]
